--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
     "examples/css.pegjs",
     "examples/javascript.pegjs",
     "examples/json.pegjs",
-    "lib/compiler/asts.js",
-    "lib/compiler/index.js",
-    "lib/compiler/js.js",
-    "lib/compiler/opcodes.js",
-    "lib/compiler/passes/generate-bytecode.js",
-    "lib/compiler/passes/generate-js.js",
-    "lib/compiler/passes/remove-proxy-rules.js",
-    "lib/compiler/passes/report-duplicate-labels.js",
-    "lib/compiler/passes/report-duplicate-rules.js",
-    "lib/compiler/passes/report-infinite-recursion.js",
-    "lib/compiler/passes/report-infinite-repetition.js",
-    "lib/compiler/passes/report-undefined-rules.js",
-    "lib/compiler/visitor.js",
-    "lib/grammar-error.js",
-    "lib/parser.js",
-    "lib/peg.js",
+    "build/compiler/asts.js",
+    "build/compiler/index.js",
+    "build/compiler/js.js",
+    "build/compiler/opcodes.js",
+    "build/compiler/passes/generate-bytecode.js",
+    "build/compiler/passes/generate-js.js",
+    "build/compiler/passes/remove-proxy-rules.js",
+    "build/compiler/passes/report-duplicate-labels.js",
+    "build/compiler/passes/report-duplicate-rules.js",
+    "build/compiler/passes/report-infinite-recursion.js",
+    "build/compiler/passes/report-infinite-repetition.js",
+    "build/compiler/passes/report-undefined-rules.js",
+    "build/compiler/visitor.js",
+    "build/grammar-error.js",
+    "build/parser.js",
+    "build/peg.js",
     "package.json"
   ],
-  "main": "lib/peg",
+  "main": "build/peg",
   "bin": "bin/peg",
   "repository": "pegjs/pegjs",
   "scripts": {
@@ -53,6 +53,7 @@
     "parser": "gulp parser"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "6.14.0",
     "babelify": "7.3.0",
     "browserify": "13.1.0",
