--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "CHANGELOG.md",
     "LICENSE",
     "README.md",
-    "bin/pegjs",
+    "bin/peg.js",
     "examples/arithmetics.pegjs",
     "examples/css.pegjs",
     "examples/javascript.pegjs",
