Make bin spec in package.json more explicit

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "package.json"
   ],
   "main": "build/peg",
-  "bin": "bin/peg",
+  "bin": { "peg" : "./bin/peg.js" },
   "repository": "pegjs/pegjs",
   "scripts": {
     "lint": "gulp lint",
